--- a/src/app/components/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/components/recipes/recipe-list/recipe-list.component.html
@@ -1,1 +1,27 @@
-<app-recipe-item></app-recipe-item>
+<div class="row">
+  <div class="col-12">
+    <button class="btn btn-success">New Recipe</button>
+  </div>
+</div>
+<hr>
+<div class="row">
+  <div class="col-12">
+    <a href="#"
+       class="list-group-item d-flex justify-content-between"
+       *ngFor="let recipe of recipes">
+      <div class="">
+
+        <h4 class="list-group-item-heading">{{ recipe.name }}</h4>
+        <p class="list-group-item-text">{{ recipe.description }}</p>
+      </div>
+      <div class="">
+        <img
+             [src]="recipe.imagePath"
+             alt="{{ recipe.name }}"
+             class="img-fluid"
+             style="max-height: 70px;">
+      </div>
+    </a>
+    <app-recipe-item></app-recipe-item>
+  </div>
+</div>
