--- a/src/app/components/shopping-list/shopping-list.component.html
+++ b/src/app/components/shopping-list/shopping-list.component.html
@@ -2,7 +2,13 @@
   <div class="col-md-10">
     <app-shopping-edit></app-shopping-edit>
     <hr>
-    <p>The list</p>
+    <ul class="list-group">
+      <a href="#"
+         class="list-group-item"
+         *ngFor="let ingredient of ingredients">
+        {{ ingredient.name }}: {{ ingredient.amount }}
+      </a>
+    </ul>
   </div>
 
 </div>
